--- a/win/libstorage/libstorage.vcxproj.filters
+++ b/win/libstorage/libstorage.vcxproj.filters
@@ -9,11 +9,24 @@
     <ClCompile Include="..\..\src\storage\knl_buf_lru.cpp" />
     <ClCompile Include="..\..\src\storage\knl_hash_table.cpp" />
     <ClCompile Include="..\..\src\storage\knl_fsp.cpp" />
-    <ClCompile Include="..\..\src\storage\knl_flst.cpp" />
     <ClCompile Include="..\..\src\storage\knl_page.cpp" />
     <ClCompile Include="..\..\src\storage\knl_dict.cpp" />
     <ClCompile Include="..\..\src\storage\knl_log.cpp" />
     <ClCompile Include="..\..\src\storage\knl_dblwrite.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_file_system.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_btree.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_trx.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_trx_rseg.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_flst.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_session.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_trx_undo.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_recovery.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_data.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_heap.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_heap_fsm.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_heap_toast.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_data_type.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_checkpoint.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\storage\include\knl_handler.h" />
@@ -23,12 +36,27 @@
     <ClInclude Include="..\..\src\storage\knl_buf_lru.h" />
     <ClInclude Include="..\..\src\storage\knl_hash_table.h" />
     <ClInclude Include="..\..\src\storage\knl_fsp.h" />
-    <ClInclude Include="..\..\src\storage\knl_flst.h" />
     <ClInclude Include="..\..\src\storage\knl_page.h" />
     <ClInclude Include="..\..\src\storage\knl_page_size.h" />
     <ClInclude Include="..\..\src\storage\knl_dict.h" />
     <ClInclude Include="..\..\src\storage\include\knl_server.h" />
     <ClInclude Include="..\..\src\storage\knl_log.h" />
     <ClInclude Include="..\..\src\storage\knl_dblwrite.h" />
+    <ClInclude Include="..\..\src\storage\knl_page_id.h" />
+    <ClInclude Include="..\..\src\storage\knl_file_system.h" />
+    <ClInclude Include="..\..\src\storage\knl_btree.h" />
+    <ClInclude Include="..\..\src\storage\knl_trx.h" />
+    <ClInclude Include="..\..\src\storage\knl_trx_rseg.h" />
+    <ClInclude Include="..\..\src\storage\knl_flst.h" />
+    <ClInclude Include="..\..\src\storage\knl_session.h" />
+    <ClInclude Include="..\..\src\storage\knl_trx_undo.h" />
+    <ClInclude Include="..\..\src\storage\knl_recovery.h" />
+    <ClInclude Include="..\..\src\storage\knl_data.h" />
+    <ClInclude Include="..\..\src\storage\knl_heap.h" />
+    <ClInclude Include="..\..\src\storage\knl_heap_fsm.h" />
+    <ClInclude Include="..\..\src\storage\knl_heap_toast.h" />
+    <ClInclude Include="..\..\src\storage\knl_trx_types.h" />
+    <ClInclude Include="..\..\src\storage\knl_data_type.h" />
+    <ClInclude Include="..\..\src\storage\knl_checkpoint.h" />
   </ItemGroup>
 </Project>
