--- a/win/libcommon/libcommon.vcxproj.filters
+++ b/win/libcommon/libcommon.vcxproj.filters
@@ -29,6 +29,13 @@
     <ClInclude Include="..\..\src\include\common\cm_error.h" />
     <ClInclude Include="..\..\src\include\common\cm_rwlock.h" />
     <ClInclude Include="..\..\src\include\common\cm_counter.h" />
+    <ClInclude Include="..\..\src\include\common\cm_locale.h" />
+    <ClInclude Include="..\..\src\include\common\cm_stack.h" />
+    <ClInclude Include="..\..\src\include\common\cm_string.h" />
+    <ClInclude Include="..\..\src\include\common\cm_attribute.h" />
+    <ClInclude Include="..\..\src\include\common\cm_timer.h" />
+    <ClInclude Include="..\..\src\include\common\cm_text.h" />
+    <ClInclude Include="..\..\src\include\common\cm_date.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\common\cm_base64.cpp" />
@@ -55,5 +62,9 @@
     <ClCompile Include="..\..\src\common\cm_random.cpp" />
     <ClCompile Include="..\..\src\common\cm_error.cpp" />
     <ClCompile Include="..\..\src\common\cm_rwlock.cpp" />
+    <ClCompile Include="..\..\src\common\cm_timer.cpp" />
+    <ClCompile Include="..\..\src\common\cm_date.cpp" />
+    <ClCompile Include="..\..\src\common\cm_timezone.cpp" />
+    <ClCompile Include="..\..\src\common\cm_text.cpp" />
   </ItemGroup>
 </Project>
