--- a/win/libstorage/libstorage.vcxproj
+++ b/win/libstorage/libstorage.vcxproj
@@ -19,35 +19,63 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\storage\knl_btree.cpp" />
     <ClCompile Include="..\..\src\storage\knl_buf.cpp" />
     <ClCompile Include="..\..\src\storage\knl_buf_flush.cpp" />
     <ClCompile Include="..\..\src\storage\knl_buf_lru.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_checkpoint.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_data.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_data_type.cpp" />
     <ClCompile Include="..\..\src\storage\knl_dblwrite.cpp" />
     <ClCompile Include="..\..\src\storage\knl_dict.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_file_system.cpp" />
     <ClCompile Include="..\..\src\storage\knl_flst.cpp" />
     <ClCompile Include="..\..\src\storage\knl_fsp.cpp" />
     <ClCompile Include="..\..\src\storage\knl_handler.cpp" />
     <ClCompile Include="..\..\src\storage\knl_hash_table.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_heap.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_heap_fsm.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_heap_toast.cpp" />
     <ClCompile Include="..\..\src\storage\knl_log.cpp" />
     <ClCompile Include="..\..\src\storage\knl_mtr.cpp" />
     <ClCompile Include="..\..\src\storage\knl_page.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_recovery.cpp" />
     <ClCompile Include="..\..\src\storage\knl_server.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_session.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_trx.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_trx_rseg.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_trx_undo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\storage\include\knl_handler.h" />
     <ClInclude Include="..\..\src\storage\include\knl_server.h" />
+    <ClInclude Include="..\..\src\storage\knl_btree.h" />
     <ClInclude Include="..\..\src\storage\knl_buf.h" />
     <ClInclude Include="..\..\src\storage\knl_buf_flush.h" />
     <ClInclude Include="..\..\src\storage\knl_buf_lru.h" />
+    <ClInclude Include="..\..\src\storage\knl_checkpoint.h" />
+    <ClInclude Include="..\..\src\storage\knl_data.h" />
+    <ClInclude Include="..\..\src\storage\knl_data_type.h" />
     <ClInclude Include="..\..\src\storage\knl_dblwrite.h" />
     <ClInclude Include="..\..\src\storage\knl_dict.h" />
+    <ClInclude Include="..\..\src\storage\knl_file_system.h" />
     <ClInclude Include="..\..\src\storage\knl_flst.h" />
     <ClInclude Include="..\..\src\storage\knl_fsp.h" />
     <ClInclude Include="..\..\src\storage\knl_hash_table.h" />
+    <ClInclude Include="..\..\src\storage\knl_heap.h" />
+    <ClInclude Include="..\..\src\storage\knl_heap_fsm.h" />
+    <ClInclude Include="..\..\src\storage\knl_heap_toast.h" />
     <ClInclude Include="..\..\src\storage\knl_log.h" />
     <ClInclude Include="..\..\src\storage\knl_mtr.h" />
     <ClInclude Include="..\..\src\storage\knl_page.h" />
+    <ClInclude Include="..\..\src\storage\knl_page_id.h" />
     <ClInclude Include="..\..\src\storage\knl_page_size.h" />
+    <ClInclude Include="..\..\src\storage\knl_recovery.h" />
+    <ClInclude Include="..\..\src\storage\knl_session.h" />
+    <ClInclude Include="..\..\src\storage\knl_trx.h" />
+    <ClInclude Include="..\..\src\storage\knl_trx_rseg.h" />
+    <ClInclude Include="..\..\src\storage\knl_trx_types.h" />
+    <ClInclude Include="..\..\src\storage\knl_trx_undo.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{535876AA-F70E-46C4-819B-4AAB9D9286AF}</ProjectGuid>
@@ -100,7 +128,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>..\..\src\include\common;..\..\src\include\strings;..\..\src\storage\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\..\src\include\securec;..\..\src\include\common;..\..\src\include\strings;..\..\src\storage\include;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)..\lib\</OutDir>
     <LibraryPath>../lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
