--- a/win/libstorage/libstorage.vcxproj
+++ b/win/libstorage/libstorage.vcxproj
@@ -24,7 +24,6 @@
     <ClCompile Include="..\..\src\storage\knl_buf_flush.cpp" />
     <ClCompile Include="..\..\src\storage\knl_buf_lru.cpp" />
     <ClCompile Include="..\..\src\storage\knl_checkpoint.cpp" />
-    <ClCompile Include="..\..\src\storage\knl_data.cpp" />
     <ClCompile Include="..\..\src\storage\knl_data_type.cpp" />
     <ClCompile Include="..\..\src\storage\knl_dblwrite.cpp" />
     <ClCompile Include="..\..\src\storage\knl_dict.cpp" />
@@ -36,15 +35,18 @@
     <ClCompile Include="..\..\src\storage\knl_heap.cpp" />
     <ClCompile Include="..\..\src\storage\knl_heap_fsm.cpp" />
     <ClCompile Include="..\..\src\storage\knl_heap_toast.cpp" />
-    <ClCompile Include="..\..\src\storage\knl_log.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_record.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_redo.cpp" />
     <ClCompile Include="..\..\src\storage\knl_mtr.cpp" />
     <ClCompile Include="..\..\src\storage\knl_page.cpp" />
     <ClCompile Include="..\..\src\storage\knl_recovery.cpp" />
     <ClCompile Include="..\..\src\storage\knl_server.cpp" />
     <ClCompile Include="..\..\src\storage\knl_session.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_start.cpp" />
     <ClCompile Include="..\..\src\storage\knl_trx.cpp" />
     <ClCompile Include="..\..\src\storage\knl_trx_rseg.cpp" />
     <ClCompile Include="..\..\src\storage\knl_trx_undo.cpp" />
+    <ClCompile Include="..\..\src\storage\knl_undo_fsm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\storage\include\knl_handler.h" />
@@ -54,9 +56,9 @@
     <ClInclude Include="..\..\src\storage\knl_buf_flush.h" />
     <ClInclude Include="..\..\src\storage\knl_buf_lru.h" />
     <ClInclude Include="..\..\src\storage\knl_checkpoint.h" />
-    <ClInclude Include="..\..\src\storage\knl_data.h" />
     <ClInclude Include="..\..\src\storage\knl_data_type.h" />
     <ClInclude Include="..\..\src\storage\knl_dblwrite.h" />
+    <ClInclude Include="..\..\src\storage\knl_defs.h" />
     <ClInclude Include="..\..\src\storage\knl_dict.h" />
     <ClInclude Include="..\..\src\storage\knl_file_system.h" />
     <ClInclude Include="..\..\src\storage\knl_flst.h" />
@@ -65,17 +67,20 @@
     <ClInclude Include="..\..\src\storage\knl_heap.h" />
     <ClInclude Include="..\..\src\storage\knl_heap_fsm.h" />
     <ClInclude Include="..\..\src\storage\knl_heap_toast.h" />
-    <ClInclude Include="..\..\src\storage\knl_log.h" />
+    <ClInclude Include="..\..\src\storage\knl_record.h" />
+    <ClInclude Include="..\..\src\storage\knl_redo.h" />
     <ClInclude Include="..\..\src\storage\knl_mtr.h" />
     <ClInclude Include="..\..\src\storage\knl_page.h" />
     <ClInclude Include="..\..\src\storage\knl_page_id.h" />
     <ClInclude Include="..\..\src\storage\knl_page_size.h" />
     <ClInclude Include="..\..\src\storage\knl_recovery.h" />
     <ClInclude Include="..\..\src\storage\knl_session.h" />
+    <ClInclude Include="..\..\src\storage\knl_start.h" />
     <ClInclude Include="..\..\src\storage\knl_trx.h" />
     <ClInclude Include="..\..\src\storage\knl_trx_rseg.h" />
     <ClInclude Include="..\..\src\storage\knl_trx_types.h" />
     <ClInclude Include="..\..\src\storage\knl_trx_undo.h" />
+    <ClInclude Include="..\..\src\storage\knl_undo_fsm.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{535876AA-F70E-46C4-819B-4AAB9D9286AF}</ProjectGuid>
